--- a/AN.Core/Resources/Enums/EnumResource.resx
+++ b/AN.Core/Resources/Enums/EnumResource.resx
@@ -156,6 +156,9 @@
   <data name="b_positive" xml:space="preserve">
     <value>B+</value>
   </data>
+  <data name="callcenter" xml:space="preserve">
+    <value>Call Center</value>
+  </data>
   <data name="checkup" xml:space="preserve">
     <value>Check-up</value>
   </data>
@@ -183,6 +186,9 @@
   <data name="emptyoffer" xml:space="preserve">
     <value>Empty Offer</value>
   </data>
+  <data name="ems" xml:space="preserve">
+    <value>EMS</value>
+  </data>
   <data name="female" xml:space="preserve">
     <value>Female</value>
   </data>
@@ -200,6 +206,9 @@
   </data>
   <data name="male" xml:space="preserve">
     <value>Male</value>
+  </data>
+  <data name="medicaltourism" xml:space="preserve">
+    <value>Medical Tourism</value>
   </data>
   <data name="MRI" xml:space="preserve">
     <value>MRI</value>
