--- a/AN.Core/Resources/EntitiesResources/Role/RolesResource.ku-Arab.resx
+++ b/AN.Core/Resources/EntitiesResources/Role/RolesResource.ku-Arab.resx
@@ -123,17 +123,29 @@
   <data name="beautycentermanager" xml:space="preserve">
     <value>بەڕێوەبەری سالۆنی جوانکاری</value>
   </data>
+  <data name="callcenter" xml:space="preserve">
+    <value>Call Center</value>
+  </data>
   <data name="clinicmanager" xml:space="preserve">
     <value>بەڕێوەبەری نۆرینگە</value>
   </data>
   <data name="doctor" xml:space="preserve">
     <value>پزیشک</value>
   </data>
+  <data name="ems" xml:space="preserve">
+    <value>EMS</value>
+  </data>
+  <data name="homecare" xml:space="preserve">
+    <value>Home Care</value>
+  </data>
   <data name="hospitalmanager" xml:space="preserve">
     <value>بەڕێوەبەری نەخۆشخانە</value>
   </data>
   <data name="labmanager" xml:space="preserve">
     <value>بەڕێوەبەری تاقیگه</value>
+  </data>
+  <data name="medicaltourism" xml:space="preserve">
+    <value>Medical Tourism</value>
   </data>
   <data name="patient" xml:space="preserve">
     <value>نەخۆش</value>
