--- a/AN.Core/Resources/EntitiesResources/Role/RolesResource.resx
+++ b/AN.Core/Resources/EntitiesResources/Role/RolesResource.resx
@@ -123,17 +123,29 @@
   <data name="beautycentermanager" xml:space="preserve">
     <value>Beauty Center Manager</value>
   </data>
+  <data name="callcenter" xml:space="preserve">
+    <value>Call Center</value>
+  </data>
   <data name="clinicmanager" xml:space="preserve">
     <value>Clinic manager</value>
   </data>
   <data name="doctor" xml:space="preserve">
     <value>Doctor</value>
   </data>
+  <data name="ems" xml:space="preserve">
+    <value>EMS</value>
+  </data>
+  <data name="homecare" xml:space="preserve">
+    <value>Home Care</value>
+  </data>
   <data name="hospitalmanager" xml:space="preserve">
     <value>Hospital manager</value>
   </data>
   <data name="labmanager" xml:space="preserve">
     <value>Lab Manager</value>
+  </data>
+  <data name="medicaltourism" xml:space="preserve">
+    <value>Medical Tourism</value>
   </data>
   <data name="patient" xml:space="preserve">
     <value>Patient</value>
