--- a/AN.Core/Resources/UI/AdminPanel/PanelResource.ar-SA.resx
+++ b/AN.Core/Resources/UI/AdminPanel/PanelResource.ar-SA.resx
@@ -217,7 +217,7 @@
     <value>تعيين المركز </value>
   </data>
   <data name="AwroNoreManager" xml:space="preserve">
-    <value>مدير أورونوره</value>
+    <value>مدير </value>
   </data>
   <data name="BeforeStartVisit" xml:space="preserve">
     <value>ما قبل البدء بالزيارة </value>
