--- a/AN.Core/Resources/UI/AdminPanel/PanelResource.ku-Arab.resx
+++ b/AN.Core/Resources/UI/AdminPanel/PanelResource.ku-Arab.resx
@@ -217,7 +217,7 @@
     <value>دیاری کردن بۆ کۆمەڵگەی پزیشکی</value>
   </data>
   <data name="AwroNoreManager" xml:space="preserve">
-    <value>بەڕێوەبەری ئەۆڕونۆرە</value>
+    <value>بەڕێوەبەری ئای دکتۆر</value>
   </data>
   <data name="BeforeStartVisit" xml:space="preserve">
     <value>بەر لە دەستپێکردنی سەردان</value>
