--- a/AN.Core/Resources/UI/AdminPanel/PanelResource.resx
+++ b/AN.Core/Resources/UI/AdminPanel/PanelResource.resx
@@ -217,7 +217,7 @@
     <value>Assign to polyclinic</value>
   </data>
   <data name="AwroNoreManager" xml:space="preserve">
-    <value>AwroNore's manager</value>
+    <value>iDoctor's manager</value>
   </data>
   <data name="BeforeStartVisit" xml:space="preserve">
     <value>Before start visit</value>
