--- a/AN.Core/Resources/Enums/EnumResource.ku-Arab.resx
+++ b/AN.Core/Resources/Enums/EnumResource.ku-Arab.resx
@@ -123,6 +123,9 @@
   <data name="ab_positive" xml:space="preserve">
     <value>AB+</value>
   </data>
+  <data name="ambulance" xml:space="preserve">
+    <value>ئەمبۆلانس</value>
+  </data>
   <data name="appointment" xml:space="preserve">
     <value>Appointment</value>
   </data>
@@ -170,6 +173,9 @@
   </data>
   <data name="country_international" xml:space="preserve">
     <value>نێودەوڵەتی</value>
+  </data>
+  <data name="covidcare" xml:space="preserve">
+    <value>چاودێری کۆڤید-١٩</value>
   </data>
   <data name="created" xml:space="preserve">
     <value>Created</value>
